prometheus/ingress/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana-test.datagrand.com
    http:
      paths:
      - backend: 
          serviceName: grafana
          servicePort: 3000

  - host: prometheus-test.datagrand.com
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  
  - host: alertmanager-test.datagrand.com
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
